rearranged some of the results for a more logical order - defined standard paths much earlier. Wrote some rough stuff in red for proofs and corrected a couple of typos

--- a/preamble.sty
+++ b/preamble.sty
@@ -205,12 +205,9 @@
 % transpose symbol
 \newcommand{\transpose}{\top}
 
-% generic category
-\newcommand{\gcat}[1][n,r]{\mathcal{G}(#1)}
-
+%% Automorphisms of the generic algebra:
 % transpose involution on the generic algebra
 \newcommand{\antipode}[1]{S{#1}}
-
 % cyclic translation on generic algebra
 \newcommand{\rotation}[1]{\tau{#1}}
 
@@ -221,7 +218,7 @@
 \newcommand{\Qqschur}[1][n,r]{\hat{S}_{\qfrac}(#1)}
 
 % -------------------------------------------- %
-%				TITLE PAGE						 %
+%				TITLE PAGE					   %
 % -------------------------------------------- %
 
 \author{Tom Crawley}
