proved the main theorem depending on the two as yet unproven technical lemmas.

--- a/preamble.sty
+++ b/preamble.sty
@@ -188,7 +188,7 @@
 \newcommand{\presentationquiver}[1][n,r]{\Gamma(#1)}
 
 % ideal of relations for presentation of q-Schur algebras.
-\newcommand{\quiverrelations}[1][n,r]{I(#1)}
+\newcommand{\qrelations}[1][n,r]{I(#1)}
 
 % ideal of relations for presentation of generic algebra
 \newcommand{\zerorelations}{\mathcal{J}}
