corrected a couple of typos

--- a/report.tex
+++ b/report.tex
@@ -2149,7 +2149,7 @@ Then the generic affine algebra $\generic$ may be realised as the $\integers$-al
 
 The purpose of this chapter is to study the link between the generic affine algebra $\generic$ and the affine $0$-Schur algebra $\zeroschur$.
 
-The main result is the construction of an isomorphism of $\integers$-algebras from $\generic$ to $\zeroschur$ such that $E_i\mapsto E_i$, $F_j\mapsto F_j$ and $1_\lambda\mapsto 1_\lambda$, in the case that $n,r\geq 1$ with $r<n$.
+The main result is the construction of an isomorphism of $\integers$-algebras from $\generic$ to $\zeroschur$ such that $E_i\mapsto E_i$, $F_i\mapsto F_i$ and $1_\lambda\mapsto 1_\lambda$, in the case that $n,r\geq 1$ with $r<n$.
 
 \section{Preliminary results on the generic affine algebra}
 
@@ -3160,7 +3160,7 @@ To prove that $\Psi$ is injective, suppose $x$ is a nonzero element of $\generic
 \begin{equation*}
 x = \sum_{A\in\lambda_1} c_Ae_A
 \end{equation*}
-and let $\Xi=\{A\in\matrices:c_A\neq 0\}$. Fix a maximal element $D$ in $\Xi$, which exist since $\Xi$ is nonempty and finite. Then
+and let $\Xi=\{A\in\matrices:c_A\neq 0\}$. Fix a maximal element $D$ in $\Xi$, which exists since $\Xi$ is nonempty and finite. Then
 \begin{align*}
 \Psi(x)
 &= \sum_{A\in\Xi} c_A\Psi(e_A)\\
