Made a lovely commuting diagram in tikz for the change of rings lemma.

--- a/preamble.sty
+++ b/preamble.sty
@@ -85,6 +85,9 @@
 %			 MATHEMATICAL OPERATORS			   %
 % -------------------------------------------- %
 
+% cokernel of a morphism
+\DeclareMathOperator{\coker}{coker}
+
 % (linear) span
 \DeclareMathOperator{\SPAN}{span}
 
